# calculator-project

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  sonar-project.properties
scripts/: package.sh  run_tests.sh
src/: calculator.c  calculator.h  main.c
tests/: integration_test.c  test_calculator.c
